Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-4378

ep-engine is printing garbage to the memcached log using -vvv

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0
    • 2.0-beta
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      41 - Running task: (conn_listening)
      <40 new auto-negotiating client connection
      40 - Running task: (conn_new_cmd)
      40: going from conn_new_cmd to conn_waiting
      40 - Running task: (conn_waiting)
      40: going from conn_waiting to conn_read
      40 - Running task: (conn_read)
      40: going from conn_read to conn_parse_cmd
      40 - Running task: (conn_parse_cmd)
      40: Client using the ascii protocol
      <40 stats
      (null) 0
      40: going from conn_parse_cmd to conn_write
      40 - Running task: (conn_write)
      40 - Running task: (conn_write)
      40 - Running task: (conn_write)
      40: going from conn_write to conn_new_cmd
      40 - Running task: (conn_new_cmd)
      40: going from conn_new_cmd to conn_waiting
      40 - Running task: (conn_waiting)
      40: going from conn_waiting to conn_read
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0
      (null) 0

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mikew Mike Wiederhold [X] (Inactive)
            mikew Mike Wiederhold [X] (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty