MB-4378: ep-engine is printing garbage in debug mode

This was caused by a log message that printed out what stats
calls were being made. Since we have a default stats command with
no extra argument this was printing out "(null) 0". This debug
line isn't really neccessary so I'm just going to remove it.

Change-Id: Id28b932c51c30337a1c3a2ada6759d18a0322b30
Reviewed-on: http://review.couchbase.org/11492
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>